Markup layout Sessielijst view

--- a/BreakOutBox/Views/Home/AboutUs.cshtml
+++ b/BreakOutBox/Views/Home/AboutUs.cshtml
@@ -3,11 +3,11 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="container">
+<div class="container pt-4">
     <div class="row">
         <div class="col text-center">
-            <p class="text-center pt-5"><i class="fas fa-box-open fa-8x text-primary"></i></p>
-            <h1 class="text-primary text-center mb-5">BreakOutBox</h1>
+            <p><i class="fas fa-box-open fa-8x text-primary"></i></p>
+            <h1 class="text-primary mb-5">BreakOutBox</h1>
             <h4>Gemaakt door</h4>
             <p>
                 Daan Dedecker <br>
