--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -7,8 +7,8 @@
 }
 
 <div class="container-fluid pt-4">
-    <div class="row text-center">
-        <div class="col mb-4">
+    <div class="row">
+        <div class="col mb-4 text-center">
             <h4 class="d-inline">@ViewData["Title"]</h4> <h2 class="d-inline ml-3 mr-3">@Model.Omschrijving</h2>
             <form asp-action="SpelSpelen" asp-controller="Spel" class="d-inline" method="get">
                 <button type="submit" style="margin-bottom: 0.75rem;" class="btn btn-outline-primary btn-pill btn-sm d-inline"><i class="fas fa-sync-alt"></i></button>
