--- a/BreakOutBox/Views/Home/Index.cshtml
+++ b/BreakOutBox/Views/Home/Index.cshtml
@@ -3,23 +3,27 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="container">
-    <p class="text-center pt-5"><i class="fas fa-box-open fa-8x text-primary"></i></p>
-    <h1 class="text-primary text-center mb-5">BreakOutBox</h1>
-    <form asp-action="Index" class="text-center" id="homeForm">
-        <div class="form-row align-items-center">
-            <div class="col-auto form-group">
-                <div class="input-group input-group-seamless">
-                    @*<label asp-for="SessieCode" class="sr-only">Sessiecode</label>*@
-                    <span class="input-group-prepend">
-                        <span class="input-group-text">
-                            <i class="fas fa-key"></i>
-                        </span>
-                    </span>
-                    <input asp-for="SessieCode" class="form-control mr-2" id="Sessiecode" placeholder="Sessiecode" type="text" autocomplete="off">
-                    <button type="submit" class="btn btn-primary">Ga</button>
+<div class="container pt-4">
+    <div class="row">
+        <div class="col text-center">
+            <p><i class="fas fa-box-open fa-8x text-primary"></i></p>
+            <h1 class="text-primary mb-5">BreakOutBox</h1>
+            <form asp-action="Index" id="homeForm">
+                <div class="form-row align-items-center">
+                    <div class="col-auto form-group">
+                        <div class="input-group input-group-seamless">
+                            @*<label asp-for="SessieCode" class="sr-only">Sessiecode</label>*@
+                            <span class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fas fa-key"></i>
+                                </span>
+                            </span>
+                            <input asp-for="SessieCode" class="form-control mr-2" id="Sessiecode" placeholder="Sessiecode" type="text" autocomplete="off">
+                            <button type="submit" class="btn btn-primary">Ga</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
-    </form>
+    </div>
 </div>
