--- a/BreakOutBox/Views/Shared/_SessionPartial.cshtml
+++ b/BreakOutBox/Views/Shared/_SessionPartial.cshtml
@@ -9,7 +9,7 @@
     <li class="nav-item active"><a asp-controller="Leerkracht" asp-action="Index" class="nav-link">Sessielijst</a></li>
     @if (Context.Session.GetString("sessiecode") != null)
     {
-        <li class="nav-item active"><a asp-controller="Leerkracht" asp-action="OverzichtGroepenInSessie" class="nav-link">Huidige sessie @(JsonConvert.DeserializeObject<string>(Context.Session.GetString("sessiecode")))</a></li>
+        <li class="nav-item active"><a asp-controller="Leerkracht" asp-action="SessieBeheren" class="nav-link">Huidige sessie @(JsonConvert.DeserializeObject<string>(Context.Session.GetString("sessiecode")))</a></li>
     }
 }
 else
