--- a/BreakOutBox/wwwroot/css/app.css
+++ b/BreakOutBox/wwwroot/css/app.css
@@ -41,3 +41,8 @@ h2 {
     margin-left: auto;
     margin-right: auto;
 }
+
+#sessielijst tr {
+    border-bottom: 1px solid lightgray;
+    line-height: 2em;
+}
