--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -9,13 +9,13 @@
 <div class="container-fluid pt-4">
     <div class="row">
         <div class="col mb-4 text-center">
-            <h4 class="d-inline">@ViewData["Title"]</h4> <h2 class="d-inline ml-3 mr-3">@Model.Omschrijving</h2>
-            <form asp-action="SpelSpelen" asp-controller="Spel" class="d-inline" method="get">
-                <button type="submit" style="margin-bottom: 0.75rem;" class="btn btn-outline-primary btn-pill btn-sm d-inline"><i class="fas fa-sync-alt"></i></button>
+            <h4 class="d-inline">Sessie</h4> <h2 class="d-inline ml-3 mr-3">@Model.Omschrijving</h2>
+            <form asp-action="SessieOverzicht" asp-controller="Sessie" class="d-inline" method="get">
+                <button type="submit" class="btn btn-outline-primary btn-pill btn-sm d-inline sync"><i class="fas fa-sync-alt"></i></button>
             </form>
             @if (ViewBag.GeselecteerdeGroep != null && Model.State == 2)
             {
-                <form asp-controller="Sessie" asp-action="StartSpel" method="post" class="mt-3">
+                <form asp-controller="Sessie" asp-action="StartSpel" class="mt-3">
                     <button type="submit" class="btn btn-primary btn-pill btn-lg">Start de eerste opdracht</button>
                 </form>
             }
