Fix GroepStates, add GroepInSpelState, correct exceptions, add alerts for SessieStates

--- a/BreakOutBox/wwwroot/css/app.css
+++ b/BreakOutBox/wwwroot/css/app.css
@@ -7,6 +7,10 @@ nav .btn:hover {
     color: black;
 }
 
+.alert {
+    margin-bottom: 0;
+}
+
 .alert-warning {
     color: darkgray;
     color: rgba(0,0,0,0.66);
