--- a/BreakOutBox/Views/Leerkracht/SessieBeheren.cshtml
+++ b/BreakOutBox/Views/Leerkracht/SessieBeheren.cshtml
@@ -42,20 +42,20 @@
             <div class="row" style="padding: 0 15px;">
                 @foreach (var groep in Model.Groepen)
                 {
-                    if (groep.State != 3 || groep.State != 4)
+                    if (groep.State != 3 && groep.State != 4)
                     {
                     <div class="col-12 col-sm-6 col-md-4 groep">
                         <ul>
-                            <li><i class="fas fa-users fa-fw"></i>Groep #@(groep.GroepId) <span class="font-weight-normal d-inline px-0">is @groep.CurrentState.Beschrijving</span></li>
+                            <li><i class="fas fa-users fa-fw icon"></i>Groep #@(groep.GroepId) <span class="font-weight-normal d-inline px-0">is @groep.CurrentState.Beschrijving</span></li>
                             @foreach (var leerling in groep.Leerlingen)
                             {
-                                <li><i class="far fa-user fa-fw"></i>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
+                                <li><i class="far fa-user fa-fw icon"></i>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
                             }
                             @switch (groep.State)
                             {
                                 case 0: // NietGereedState
                                     <li>
-                                        <a href="@Url.Action("ZetGroepGereed", "Leerkracht", new { groepid = groep.GroepId })" title="Zet deze groep op gekozen">
+                                        <a href="@Url.Action("ZetGroepGekozen", "Leerkracht", new { groepid = groep.GroepId })" title="Zet deze groep op gekozen">
                                             Zet deze groep op gekozen
                                         </a>
                                     </li>
@@ -67,7 +67,7 @@
                                     break;
                                 case 1: // GereedState
                                     <li>
-                                        <a href="@Url.Action("ZetGroepNietGereed", "Leerkracht", new { groepid = groep.GroepId })" title="Zet deze groep op niet-gekozen">
+                                        <a href="@Url.Action("ZetGroepNietGekozen", "Leerkracht", new { groepid = groep.GroepId })" title="Zet deze groep op niet-gekozen">
                                             Zet deze groep op niet-gekozen
                                         </a>
                                     </li>
@@ -100,11 +100,11 @@
                     {
                     <div class="col-12 col-sm-6 col-md-4 groep">
                         <ul>
-                            <li><i class="fas fa-users fa-fw"></i>Groep #@(groep.GroepId) <span class="font-weight-normal d-inline px-0">is @groep.CurrentState.Beschrijving</span></li>
-                            <li><i class="fas fa-tasks fa-fw"></i>Opdracht @(groep.Pad.getProgressie()[1] + 1) van de @groep.Pad.getProgressie()[0]</li>
+                            <li><i class="fas fa-users fa-fw icon"></i>Groep #@(groep.GroepId) <span class="font-weight-normal d-inline px-0">is @groep.CurrentState.Beschrijving</span></li>
+                            <li><i class="fas fa-tasks fa-fw icon"></i>Bezig aan opdracht @(groep.Pad.getProgressie()[1] + 1) van de @groep.Pad.getProgressie()[0]</li>
                             @foreach (var leerling in groep.Leerlingen)
                             {
-                                <li><i class="far fa-user fa-fw"></i>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
+                                <li><i class="far fa-user fa-fw icon"></i>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
                             }
                             @switch (groep.State)
                             {
