--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -36,7 +36,7 @@
                             }
                             @if (ViewBag.GeselecteerdeGroep.State != 2)
                             {
-                                <li><a href="@Url.Action("ZetGroepNietGereed", "Sessie")" class="tip" title="Klik hier om deze groep te deselecteren">Deze groep deselecteren</a></li>
+                                <li><a href="@Url.Action("ZetGroepNietGekozen", "Sessie")" title="Klik hier om deze groep te deselecteren">Deze groep deselecteren</a></li>
                             }
                         </ul>
                     </div>
@@ -54,19 +54,19 @@
                             {
                                 <li><i class="far fa-user fa-fw icon"></i>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
                             }
-                            @if (groep.State == 0 && groep.State != 2 && ViewBag.GeselecteerdeGroep == null)
+                            @if (groep.State == 0 && ViewBag.GeselecteerdeGroep == null)
                             {
-                                <li><a href="@Url.Action("ZetGroepGereed", "Sessie", new { groepid = groep.GroepId.ToString() })" class="tip" title="Klik hier als dit jullie groep is">Dit is ons groepje</a></li>
+                                <li><a href="@Url.Action("ZetGroepGekozen", "Sessie", new { groepid = groep.GroepId.ToString() })" title="Klik hier als dit jullie groep is">Dit is ons groepje</a></li>
                             }
-                            @if (groep.State == 1 && groep.State != 2 && ViewBag.GeselecteerdeGroep != null && ViewBag.GeselecteerdeGroep.GroepId == groep.GroepId)
+                            @if (groep.State == 1 && ViewBag.GeselecteerdeGroep != null && ViewBag.GeselecteerdeGroep.GroepId == groep.GroepId)
                             {
-                                <li><a href="@Url.Action("ZetGroepNietGereed", "Sessie")" class="tip" title="Klik hier om deze groep te deselecteren">Deze groep deselecteren</a></li>
+                                <li><a href="@Url.Action("ZetGroepNietGekozen", "Sessie")" title="Klik hier om deze groep te deselecteren">Deze groep deselecteren</a></li>
                             }
-                            @if (groep.State == 1 && groep.State != 2 && ViewBag.GeselecteerdeGroep == null)
+                            @if (groep.State == 1 && ViewBag.GeselecteerdeGroep == null)
                             {
                                 <li>Deze groep is niet beschikbaar</li>
                             }
-                            @if (groep.State == 2)
+                            @if (groep.State == 2 && ViewBag.GeselecteerdeGroep == null)
                             {
                                 <li>Deze groep is vergrendeld</li>
                             }
