--- a/BreakOutBox/Views/Shared/_Layout.cshtml
+++ b/BreakOutBox/Views/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
                 crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl">
         </script>
     </environment>
+    <script src="~/lib/Bootstrap-Confirmation-master/dist/bootstrap-confirmation.min.js"></script>
     <script src="~/lib/Shards-Version-2.0.1/js/shards.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
 
