Change namings of views and titles

--- a/BreakOutBox/Views/Leerkracht/SessieBeheren.cshtml
+++ b/BreakOutBox/Views/Leerkracht/SessieBeheren.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BreakOutBox.Models.Domain.Sessie
 @{
-    ViewData["Title"] = "Overzicht";
+    ViewData["Title"] = "Sessie " + Model.Code + " beheren";
 }
 @section Head {
     <link rel="stylesheet" href="~/css/groep.css">
