--- a/BreakOutBox/Views/Spel/Feedback.cshtml
+++ b/BreakOutBox/Views/Spel/Feedback.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BreakOutBox.Models.SpelViewModels.SpelSpelenViewModel
 @{
-    ViewData["Title"] = "Feedback";
+    ViewData["Title"] = "Geblokkeerd!";
 }
 
 @section Head {
