--- a/BreakOutBox/Views/Spel/Feedback.cshtml
+++ b/BreakOutBox/Views/Spel/Feedback.cshtml
@@ -1,12 +1,11 @@
-﻿@model BreakOutBox.Models.SpelViewModels.SpelSpelenViewModel
-@{
+﻿@{
     ViewData["Title"] = "Geblokkeerd!";
 }
 
 @section Head {
-    <meta http-equiv="refresh" content="8">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    @*<meta http-equiv="refresh" content="8">*@
+    @*<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>*@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 }
@@ -26,3 +25,47 @@ else
 }
 <br />
 <object height="750" type="application/pdf" data="~/algemenepdfs/Theorie.pdf"></object>
+
+
+
+<div class="container-fluid pt-4">
+    <div class="row">
+        <div class="col mb-4 text-center">
+            <h4 class="d-inline">Sessie</h4> <h2 class="d-inline ml-3 mr-3">@Model.Omschrijving</h2>
+            <form asp-action="GroepKiezen" asp-controller="Sessie" class="d-inline" method="get">
+                <button type="submit" class="btn btn-outline-primary btn-pill btn-sm d-inline sync"><i class="fas fa-sync-alt"></i></button>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 col-lg-6 mb-5">
+            @if (Convert.ToInt32(TempData["State"]) != 4)
+            {
+                <h4>Gedeblokkeerd</h4>
+                <p>Je groepje is gedeblokkeerd, jullie kunnen de opdracht opnieuw proberen.</p>
+                <form asp-action="TerugNaarOefening">
+                    <button type="submit" class="btn btn-primary btn-pill">Terug naar opdracht</button>
+                </form>
+            }
+            else
+            {
+                <h4>Geblokkeerd</h4>
+                <p>
+                    Je groepje is geblokkeerd.
+                    Lees de theorie grondig door en als jullie het begrijpen, kan je de leerkracht vragen om jullie te deblokkeren.
+                    Nadat de leerkracht jouw groepje gedeblokkeerd heeft, druk dan eens op de herlaad-knop.
+                </p>
+                <form asp-action="GroepKiezen" asp-controller="Sessie" class="d-inline" method="get">
+                    <button type="submit" class="btn btn-outline-primary btn-pill btn-sm"><i class="fas fa-sync-alt"></i></button>
+                </form>
+            }
+        </div>
+        <div class="col-md-12 col-lg-6 mb-5">
+            <h4>Feedback</h4>
+            <p>Dit is de theorie die bij de opdracht hoort. Lees deze grondig door tot je het begrijpt.</p>
+            <div id="pdfcontainer">
+                <object type="application/pdf" data="~/algemenepdfs/Theorie.pdf" id="pdf"></object>
+            </div>
+        </div>
+    </div>
+</div>
