--- a/BreakOutBox/Views/Spel/Feedback.cshtml
+++ b/BreakOutBox/Views/Spel/Feedback.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Geblokkeerd!";
 }
-
 @section Head {
     @*<meta http-equiv="refresh" content="8">*@
     @*<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -9,24 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 }
-
-<h2>Feedback</h2>
-<h3>Uitleg over de opdracht.</h3>
-@if (Convert.ToInt32(TempData["State"]) == 1) // Moet op == 1 staan (!= 1 is voor testen)
-{
-    <p>Je bent gedeblokkeerd, je kunt terug opnieuw proberen.</p>
-    <form asp-action="TerugNaarOefening">
-        <button type="submit">Keer terug naar spel.</button>
-    </form>
-}
-else
-{
-    <p>Je bent geblokkeerd.</p>
-}
-<br />
-<object height="750" type="application/pdf" data="~/algemenepdfs/Theorie.pdf"></object>
-
-
 
 <div class="container-fluid pt-4">
     <div class="row">
@@ -43,8 +24,8 @@ else
             {
                 <h4>Gedeblokkeerd</h4>
                 <p>Je groepje is gedeblokkeerd, jullie kunnen de opdracht opnieuw proberen.</p>
-                <form asp-action="TerugNaarOefening">
-                    <button type="submit" class="btn btn-primary btn-pill">Terug naar opdracht</button>
+                <form>
+                    <button type="submit" class="btn btn-primary">Terug naar opdracht</button>
                 </form>
             }
             else
@@ -55,7 +36,7 @@ else
                     Lees de theorie grondig door en als jullie het begrijpen, kan je de leerkracht vragen om jullie te deblokkeren.
                     Nadat de leerkracht jouw groepje gedeblokkeerd heeft, druk dan eens op de herlaad-knop.
                 </p>
-                <form asp-action="GroepKiezen" asp-controller="Sessie" class="d-inline" method="get">
+                <form asp-action="Feedback" method="get">
                     <button type="submit" class="btn btn-outline-primary btn-pill btn-sm"><i class="fas fa-sync-alt"></i></button>
                 </form>
             }
