--- a/BreakOutBox/Views/Leerkracht/Index.cshtml
+++ b/BreakOutBox/Views/Leerkracht/Index.cshtml
@@ -14,6 +14,7 @@
                     <th>Omschrijving</th>
                     <th>Groepen</th>
                     <th>Status</th>
+                    <th>Acties</th>
                 </tr>
                 @{int i = 1;}
                 @foreach (var item in Model)
