--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -68,7 +68,7 @@
         console.log("Antwoord " + @(Model.Opdracht.Oefening.Antwoord.ToString()));
         console.log("Toegangscode " + @(Model.ToegangscodeVolgendeOefening.ToString()));
         console.log("Antwoord met toegangscode: " + @(Model.Opdracht.Oefening.AntwoordMetGroepsbewerking()));
-        console.log("Teller " + @Model.Opdracht.foutePogingen);
+        console.log("Teller " + @Model.Opdracht.FoutePogingen);
         console.log("Progressie " + @progressie[0] + " " + @progressie[1]);
         //console.log("State " + @TempData["State"]);
         //console.log("SessieCode " + @Model.SessieCode);
