--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -1,13 +1,6 @@
-﻿@model BreakOutBox.Models.SpelViewModels.SpelSpelenViewModel
+﻿@model BreakOutBox.Models.SpelViewModels.SpelViewModel
 @{
-    var progressie = Model.ProgressieInPad;
-    var progressiePercentage = ((((decimal)progressie[1] + 1) / ((decimal)progressie[0])) * 100);
-    var progressiePercentageCompleted = (int)(System.Math.Round(progressiePercentage, 0) - ((decimal)100 / progressie[0]));
     ViewData["Title"] = @Model.Opdracht.Oefening.Naam;
-}
-@section Head {
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 }
 
 <div class="container-fluid pt-4">
@@ -18,18 +11,19 @@
                 <button type="submit" class="btn btn-outline-primary btn-pill btn-sm d-inline sync"><i class="fas fa-sync-alt"></i></button>
             </form>
             <div class="progress progress-lg mt-3">
-                <div class="progress-bar" role="progressbar" style="width: @(progressiePercentageCompleted)%" aria-valuenow="@(progressiePercentageCompleted)" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: @(Model.PercentageVoltooid * 100)%"
+                     aria-valuenow="@(Model.PercentageVoltooid)" aria-valuemin="0.00" aria-valuemax="1.00"></div>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12 col-lg-6 mb-5">
             <h4>@Model.Opdracht.Oefening.Naam</h4>
-            <p>Opdracht @(progressie[1] + 1) van de @(progressie[0]).</p>
+            <p>Opdracht @(Model.NrHuidigeOpdracht) van de @(Model.NrTotaalOpdrachten).</p>
             <form id="formAntwoord" name="formAntwoord" method="post">
                 <p>
                     Stap 1: Maak de oefening.<br>
-                    Stap 2: Voer deze groepsbewerking uit op het antwoord. Groepsbewerking: @(Model.Opdracht.Oefening.Groepsbewerking.ToString()).<br>
+                    Stap 2: Voer deze groepsbewerking uit op het antwoord. Groepsbewerking: @(Model.Opdracht.Groepsbewerking.ToString())<br>
                     Stap 3: Vul je bekomen resultaat hieronder in.
                 </p>
                 <div class="form-group">
@@ -40,8 +34,8 @@
                             </span>
                         </span>
                         <input id="Toegangscode" asp-for="Groepsantwoord" type="text" class="form-control" autocomplete="off" placeholder="Antwoord na groepsbewerking">
-                        <span asp-validation-for="Groepsantwoord" class="text-danger" id="foutTeksvakLeeg"></span>
                     </div>
+                    <span asp-validation-for="Groepsantwoord" class="text-danger" id="foutTeksvakLeeg"></span>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary" id="GaVerder">Geef antwoord in</button>
@@ -52,7 +46,6 @@
         </div>
         <div class="col-md-12 col-lg-6 mb-5">
             <h4>Opgave</h4>
-            @*<p></p>*@
             <div id="pdfcontainer">
                 <object type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf"></object>
             </div>
@@ -61,119 +54,14 @@
 </div>
 
 @section Scripts {
-    <script asp-src-include="lib/jquery-validation/dist/jquery.validate.js"></script>
-    <script asp-src-include="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <environment include="Development">
+        <script>
+        console.log("@Model.Opdracht.Oefening.Antwoord.ToString()");
+        console.log("@Model.Opdracht.Groepsbewerking.ToString()");
+        </script>
+    </environment>
 
     <script>
-        console.log("Antwoord " + @(Model.Opdracht.Oefening.Antwoord.ToString()));
-        console.log("Toegangscode " + @(Model.ToegangscodeVolgendeOefening.ToString()));
-        console.log("Antwoord met toegangscode: " + @(Model.Opdracht.Oefening.AntwoordMetGroepsbewerking()));
-        console.log("Teller " + @Model.Opdracht.FoutePogingen);
-        console.log("Progressie " + @progressie[0] + " " + @progressie[1]);
-        //console.log("State " + @TempData["State"]);
-        //console.log("SessieCode " + @Model.SessieCode);
-        console.log("GroepId " +@Model.GroepId);
 
-        if ("@(Model.JuistGeantwoordOpgave)" == "True") {
-            document.getElementById("Toegangscode").value = (@(Model.Opdracht.Oefening.AntwoordMetGroepsbewerking().ToString()));
-            document.getElementById("JuistGeantwoordtoegangscodeStringId").value = "True";
-
-            groepsantwoordJuist();
-
-            console.log("bool " + '@(Model.JuistGeantwoordOpgave)');
-            console.log("bool " + '@(Model.JuistGeantwoordtoegangscode)');
-        }
-
-        function groepsantwoordJuist() {
-            if (@(progressie[1] + 1) == @(progressie[0])){
-                swal({
-                    title: 'Juist! Schatkist gevonden!',
-                    text: '',
-                    showCancelButton: false,
-                    confirmButtonText: 'Sluit het spel'
-                },
-                function () {
-                    console.log("hier");
-                    window.location.href = "/Home/Index";
-                });
-            } else {
-                swal({ // de swal van alle oefeningen
-                    title: "Toegangscode volgende oefening",
-                    text: "@Model.Opdracht.Actie.Omschrijving.ToString() (@(Model.Opdracht.Oefening.AntwoordMetGroepsbewerking())) en vul de toegangscode hieronder in",
-                    type: "input",
-                    showCancelButton: false,
-                    closeOnConfirm: false,
-                    animation: "slide-from-top",
-                    inputPlaceholder: "Toegangscode"
-                },
-                function (inputValue) {
-                    var j = @(Model.ToegangscodeVolgendeOefening);
-                    if (inputValue === false) return false;
-
-                    if (inputValue === "") {
-                        swal.showInputError("You need to write something!");
-                        return false;
-                    }
-                    if (!(inputValue == j)) {
-                        swal.showInputError("Dit is niet de juiste toegangscode");
-                        console.log("inputvalue1 :" + inputValue);
-                        console.log("inputvalue2 :" + j);
-                        return false;
-                    }
-
-                    swal("Juist!", "Op naar de volgende oefening!", );
-                    //@(Model.JuistGeantwoordtoegangscode) = true;
-                    document.getElementById("JuistGeantwoordtoegangscodeStringId").value = "True";
-                    setTimeout(delaySubmit, 1000);
-                });
-            }
-        }
-
-        function hulp() {
-            swal({
-                title: "Feedback",
-                type: "info",
-                showCancelButton: false,
-                closeOnConfirm: true,
-                confirmButtonText: "Theorie pdf",
-                animation: "slide-from-top",
-            },
-            function () {
-                window.location.href = "http://example.com/new_url";
-            });
-            console.log("Gelukt");
-        }
-
-        @*function geblokkeerd() {
-            if (@TempData["State"] == 3 || @TempData["State"] == 2 ) {
-                //swal({
-                //    title: "Geblokkeerd",
-                //    type: "Warning",
-                //    showCancelButton: false,
-                //    closeOnConfirm: true,
-                //    confirmButtonText: "Refresh",
-                //    animation: "slide-from-top",
-                //},
-                //    function () {
-                //        document.getElementById("Toegangscode").value = "";
-                //        window.location.reload();
-                //    });
-                $("#GaVerder").click(function () {
-                    alert('clicked')
-                    $("#div").load(" #div > *");
-                });
-            }
-
-            $("#GaVerder").click(function () {
-                if (@TempData["State"] == 3 || @TempData["State"] == 2) {
-                    alert('clicked')
-                    $("#div").load(" #div > *");
-                }
-            });
-        }*@
-
-        function delaySubmit() {
-            document.getElementById("formAntwoord").submit();
-        }
     </script>
 }
